<resources>
    <string name="app_name">Student Signup App</string>
    <string name="student_name">Student Name</string>
    <string name="student_name_editText">NSU ID Name</string>
    <string name="student_id">Student ID</string>
    <string name="student_id_editText">7 Digit Student ID</string>
    <string name="school_name">School</string>
    <string name="department_name">Department</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="nid_number">NID Number</string>
    <string name="nid_no_10_digits">NID no. (10 Digits)</string>
    <string name="button_next">Forward</string>
    <string name="button_submit">Submit</string>
    <string name="present_address">Present Address</string>
    <string name="country_name">Country Name</string>
    <string name="district_name">District</string>
    <string name="post_office_name">Post Office</string>
    <string name="police_station_name">Police Station</string>
    <string name="postal_code">Postal Code</string>
    <string name="hvc_name">House/Village/City</string>
    <string name="rbs_name">Road/Block/Sector</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="country_name_2">Country Name</string>
    <string name="district_name_2">District</string>
    <string name="post_office_2">Post Office</string>
    <string name="police_station_2">Police Station</string>
    <string name="postal_code_2">Postal Code</string>
    <string name="hvc_name_2">House/Village/City</string>
    <string name="rbs_name_2">Road/Block/Sector</string>
    <string name="back_button">Back</string>
    <string name="button_search">Search</string>
    <string name="button_student_list">Student List</string>
    <string name="save_data">Student Information Saved</string>
    <string name="country_code">+880</string>
    <string name="no_item">No Student List Found.</string>
    <string name="student_id_button">ID</string>
    <string name="student_department_button">Department</string>
    <string name="student_school_button">School</string>
    <string name="empty_search_field">Search field is empty!!</string>
    <string name="no_results_found">No Results Found !!</string>
    <string name="bangla">বাংলা</string>
    <string name="english">English</string>
    <string name="label_search">Search</string>
    <string name="label_student_list">Student List</string>
    <string name="label_address">Address</string>
    <string name="button_language">Language</string>
    <string name="search_hint">Search…</string>
    <string name="select_language">Select Language</string>

    <string-array name="school_names">
        <item>School of Business &amp; Economics</item>
        <item>School of Engineering &amp; Physical Sciences</item>
        <item>School of Humanities &amp; Social Sciences</item>
        <item>School of Health &amp; Life Sciences</item>
    </string-array>

    <string-array name="sbe_department_spinner">
        <item>Department of Accounting &amp; Finance</item>
        <item>Department of Economics</item>
        <item>Department of Management</item>
        <item>Department of Marketing &amp; International Business</item>
    </string-array>

    <string-array name="sep_department_spinner">
        <item>Department of Architecture</item>
        <item>Department of Civil &amp; Environmental Engineering</item>
        <item>Department of Electrical &amp; Computer Engineering</item>
        <item>Department of Mathematics &amp; Physics</item>
    </string-array>

    <string-array name="shs_department_spinner">
        <item>Department of English &amp; Modern Languages</item>
        <item>Department of Political Science &amp; Sociology</item>
        <item>Department of Law</item>
        <item>Department of History &amp; Philosophy </item>
    </string-array>

    <string-array name="shl_department_spinner">
        <item>Department of Biochemistry &amp; Microbiology</item>
        <item>Department of Environmental Science &amp; Management</item>
        <item>Department of Pharmaceutical Sciences</item>
        <item>Department of Public Health</item>
    </string-array>


</resources>