<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <SearchView
        android:id="@+id/student_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_hint"
        android:iconifiedByDefault="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/student_id_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/student_id_button"
            android:onClick="idFilter"/>

        <Button
            android:id="@+id/student_department_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/student_department_button"
            android:onClick="departmentFilter"/>
        <Button
            android:id="@+id/student_school_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/student_school_button"
            android:onClick="schoolFilter"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recyclerView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/search_list_item"/>


</LinearLayout>
